--- a/Colorspread.vcxproj.filters
+++ b/Colorspread.vcxproj.filters
@@ -18,53 +18,39 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GeneratedFiles\Debug\moc_MainWindow.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_MainWindow.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
+    
+    
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="GlWidget.cpp" />
     <ClCompile Include="Constants.cpp" />
-    <ClCompile Include="GeneratedFiles\Debug\moc_SeedDialog.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_SeedDialog.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
+    
+    
     <ClCompile Include="SeedDialog.cpp" />
     <ClCompile Include="Utils.cpp" />
-    <ClCompile Include="GeneratedFiles\Debug\moc_GameEngine.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_GameEngine.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
+    
+    
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="GameBoard.cpp" />
+    <ClCompile Include="Globals.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GeneratedFiles\ui_MainWindow.h">
-      <Filter>Generated Files</Filter>
-    </ClInclude>
+    
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="GlWidget.h" />
     <ClInclude Include="Constants.h" />
-    <ClInclude Include="GeneratedFiles\ui_SeedDialog.h">
-      <Filter>Generated Files</Filter>
-    </ClInclude>
+    
     <ClInclude Include="Utils.h" />
     <ClInclude Include="GameBoard.h" />
+    <ClInclude Include="Globals.h" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="MainWindow.ui" />
-    <CustomBuild Include="MainWindow.h" />
-    <CustomBuild Include="SeedDialog.ui" />
-    <CustomBuild Include="SeedDialog.h" />
-    <CustomBuild Include="GameEngine.h" />
+    <QtUic Include="MainWindow.ui" />
+    <QtMoc Include="MainWindow.h" />
+    <QtUic Include="SeedDialog.ui" />
+    <QtMoc Include="SeedDialog.h" />
+    <QtMoc Include="GameEngine.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Colorspread.rc" />
