Fixed CMakefile for windows and upgraded Visual Studio project to VS 2022.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if (NOT DEFINED ENV{QTDIR})
    message(FATAL_ERROR "QTDIR needs to be defined and point to the root of your Qt folder. (e.g. /Users/MyName/Qt/5.10.1/clang_64).")
 endif()
 
-set(CMAKE_PREFIX_PATH  ${CMAKE_PREFIX_PATH} $ENV{QTDIR})
+set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} $ENV{QTDIR})
 set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG")
 
 find_package(Qt6Core)
@@ -17,6 +17,7 @@ find_package(Qt6Gui)
 find_package(Qt6Widgets)
 find_package(Qt6OpenGL)
 find_package(Qt6OpenGLWidgets)
+find_package(OpenGL)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC_MOC_OPTIONS "-bstdafx.h")
@@ -56,3 +57,4 @@ target_link_libraries(Colorspread Qt6::Gui)
 target_link_libraries(Colorspread Qt6::Widgets)
 target_link_libraries(Colorspread Qt6::OpenGL)
 target_link_libraries(Colorspread Qt6::OpenGLWidgets)
+target_link_libraries(Colorspread OpenGL32)
